--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
         <div class="column4">
           <form action="#" id="form">
             <div class="inputBox">
-            <input type="email" placeholder="Updates in your inbox..." id="email" />
-            <button class="btn" type="submit">Go</button>
-            <span class="msg" id="msg"></span>
+            <input type="text" placeholder="Updates in your inbox..." id="email" />
+            <button class="btn" type="submit" >Go</button>
+            <span  id="msg"></span>
           </div>
           </form>
           <p>Copyright 2020. All Rights Reserved</p>
