--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Daniel Daso</a>.
     </div>
   </body>
   <script src="swiper-bundle.min.js"></script>
